media q's almost done

--- a/responsive-index.html
+++ b/responsive-index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>About Me</title>
-    
 </head>
 
 <body>
@@ -11,16 +11,16 @@
     <div id="head"><br>
     
         <div id="myname">
-            Logan Swenson
+            <span>Logan Swenson</span>
         </div>
 
         <div id="links">
 
-            <a href="index.html">About</a> 
+            <a href="responsive-index.html">About</a> 
             |
-            <a href="portfolio.html">Portfolio</a> 
+            <a href="responsive-portfolio.html">Portfolio</a> 
             |
-            <a href="contact.html">Contact</a>
+            <a href="responsive-contact.html">Contact</a>
 
         </div>
 
