--- a/responsive-contact.html
+++ b/responsive-contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Contact</title>
 </head>
@@ -8,15 +9,15 @@
         <div id="head"><br>
     
             <div id="myname">
-                Logan Swenson
+                <span>Logan Swenson</span>
             </div>
     
             <div id="links">
-                <a href="index.html">About</a> 
+                <a href="responsive-index.html">About</a> 
                 |
-                <a href="portfolio.html">Portfolio</a> 
+                <a href="responsive-portfolio.html">Portfolio</a> 
                 |
-                <a href="contact.html">Contact</a>
+                <a href="responsive-contact.html">Contact</a>
             </div>
 
         </div>
